# empty

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  build-docker-image.sh  empty.code-workspace  main.py  mypy.ini  pyproject.toml  pytest.ini
src/empty/: main.py
tests/: conftest.py  main_test.py
