[project]
name = "empty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "ipython>=9.4.0",
    "isort>=6.1.0",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pycodestyle>=2.14.0",
    "pylint>=3.3.8",
    "pympler>=1.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "rich>=14.1.0",
    "ruff>=0.12.10",
    "testcontainers>=4.12.0",
]
